# OZ_Backend_School

./: .gitignore  README.md
DataAnalysis/homework/: iris.ipynb  pyproject.toml  train.csv
DataAnalysis/lecture/: matplot.ipynb  pyproject.toml  scikit-learn.ipynb
Database/challenge/: Day6.sql  chapter01_06.ipynb  chapter07_13.ipynb  chapter14_21.sql  chapter22_27.sql  create3DayTable.sql  day7.sql
Database/trainning/: trainning.sql
Django/: Readme.md  db.sqlite3  pyproject.toml
Django/config/: settings.py  urls.py
Django/homework/: orm.ipynb
Django/lecture/: db.sqlite3  pyproject.toml
Django/lecture/boards/: admin.py  apps.py  models.py  serializers.py
Django/lecture/boards/migrations/: 0001_initial.py  0002_board_writer.py  0003_board_created_at_board_updated_at.py  0004_board_user.py
Django/lecture/common/: models.py
Django/lecture/config/: authentication.py  settings.py  urls.py
Django/lecture/feeds/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
Django/lecture/feeds/migrations/: 0001_initial.py
Django/lecture/reviews/: admin.py  models.py  serializers.py  urls.py  views.py
Django/lecture/reviews/migrations/: 0001_initial.py  0002_rename_reviews_review.py
Django/lecture/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
Django/lecture/users/migrations/: 0001_initial.py  0002_user_grade_user_is_business.py  0002_user_is_business.py  0003_user_grade.py
DjangoDatabaseSupply/djangoProject/: .gitignore  pyproject.toml
DjangoDatabaseSupply/djangoProject/djangoProject/: settings.py
HTML+CSS/: README.md
HTML+CSS/CSS강의코드/: 2-CSS문서-사용하기.css  CSS 문서 사용하기.html  profile.css  겹치거나 넘치는 요소 다루기.html  국희의 프로필.html  문서의 흐름.html  박스 모델이란.html  배경을 깔아보자.html  색깔을 지정하는 다양한 방법.html  (+8 more)
JavaScript/: README.md
Linux/: linux_0113(문제).ipynb  linux_1426.ipynb
Python/: README.md
Web_Crawling/: pyproject.toml
Web_Crawling/homework/: test.ipynb  web_scraping1.py  web_scraping2.py  web_scraping_add_day1.py  web_scraping_melon.py
Web_Crawling/web_crawling/: melon_2.py  naver_1.py  naver_2.py
YoutubeRestAPI/: Dockerfile  README.md  cicdAndPostgresql.md  docker-compose.yml  docker.md  requirements.txt
(+399 files in other folders)
