[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["JoonHoSeong <joonho1366@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
django-stubs = "^5.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
